Cleanup of compiler warnings and deprecations.